--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 # tasks file for apache
 - name: package
-  package:
+  ansible.builtin.package:
     name: apache2
   become: true
   tags:
@@ -30,9 +30,10 @@
 #     - ssl
 #     - dhparam
 
-- block:
+- name: sites
+  block:
     - name: documentroot
-      file:
+      ansible.builtin.file:
         path: "{{ item.documentroot }}"
         state: directory
         mode: 02775
@@ -46,7 +47,7 @@
         - documentroot
 
     - name: vhost
-      template:
+      ansible.builtin.template:
         src: "apache-{{ item.template | default('http-site') }}.conf.j2"
         dest: "/etc/apache2/sites-available/{{ item.name }}.conf"
         mode: 0644
@@ -64,7 +65,7 @@
         - template
 
     - name: vhost absence
-      file:
+      ansible.builtin.file:
         path: "/etc/apache2/sites-available/{{ item.name }}.conf"
         state: absent
       loop: "{{ apache_sites }}"
@@ -77,7 +78,7 @@
         - template
 
     - name: link presence
-      file:
+      ansible.builtin.file:
         src: "../sites-available/{{ item.name }}.conf"
         path:
           "/etc/apache2/sites-enabled/{{ item.index |
@@ -97,7 +98,7 @@
         - link
 
     - name: link absence
-      file:
+      ansible.builtin.file:
         path:
           "/etc/apache2/sites-enabled/{{ item.index |
           default('') }}{{ item.name }}.conf"
