--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -30,90 +30,8 @@
 #     - ssl
 #     - dhparam
 
-- name: sites
-  block:
-    - name: documentroot
-      ansible.builtin.file:
-        path: "{{ item.documentroot }}"
-        state: directory
-        mode: 02775
-        owner: www-data
-        group: www-data
-      loop: "{{ apache_sites }}"
-      when:
-        - item.documentroot is defined
-      tags:
-        - apache
-        - documentroot
-
-    - name: vhost
-      ansible.builtin.template:
-        src: "apache-{{ item.template | default('http-site') }}.conf.j2"
-        dest: "/etc/apache2/sites-available/{{ item.name }}.conf"
-        mode: 0644
-      notify: reload apache
-      loop: "{{ apache_sites }}"
-      when:
-        - item.name != '000-default'
-        - item.enabled is not defined
-          or item.enabled|lower in ['yes', 'true']
-        - item.available is not defined
-          or item.available|lower in ['yes', 'true']
-      tags:
-        - apache
-        - vhost
-        - template
-
-    - name: vhost absence
-      ansible.builtin.file:
-        path: "/etc/apache2/sites-available/{{ item.name }}.conf"
-        state: absent
-      loop: "{{ apache_sites }}"
-      when:
-        - item.available is defined
-        - item.available|lower in ['no', 'false']
-      tags:
-        - apache
-        - vhost
-        - template
-
-    - name: link presence
-      ansible.builtin.file:
-        src: "../sites-available/{{ item.name }}.conf"
-        path:
-          "/etc/apache2/sites-enabled/{{ item.index |
-          default('') }}{{ item.name }}.conf"
-        state: link
-      notify: reload apache
-      loop: "{{ apache_sites }}"
-      when:
-        - not ansible_check_mode
-        - item.available is not defined
-          or item.available|lower in ['yes', 'true']
-        - item.enabled is not defined
-          or item.enabled
-      tags:
-        - apache
-        - vhost
-        - link
-
-    - name: link absence
-      ansible.builtin.file:
-        path:
-          "/etc/apache2/sites-enabled/{{ item.index |
-          default('') }}{{ item.name }}.conf"
-        state: absent
-      notify: reload apache
-      loop: "{{ apache_sites }}"
-      when:
-        - item.enabled is defined
-        - not item.enabled
-      tags:
-        - apache
-        - vhost
-        - link
-
-  become: true
+- import_tasks: sites.yml
   when:
     - apache_sites is defined
     - apache_sites | length > 0
+    - "'apache2.service' in services"
