--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -15,6 +15,11 @@
     - facts
     - vhost
 
+- import_tasks: configs.yml
+  when:
+    - apache_configs is defined
+    - "'apache2.service' in services"
+
 - import_tasks: modules.yml
   when:
     - apache_modules is defined
