--- a/tasks/modules.yml
+++ b/tasks/modules.yml
@@ -3,6 +3,7 @@
   community.general.apache2_module:
     name: "{{ item.name }}"
     state: "{{ item.state }}"
+    force: "{{ item.force | default(omit) }}"
   loop: "{{ apache_modules }}"
   become: true
   notify: reload apache
