--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -43,7 +43,10 @@ apache_dhparam:
 #     enabled: true
 #     state: present
 #     template: apache-remoteip.conf.j2
-#     remote_ip_internal_proxy: 10.0.0.0/24
+#     remote_ip_internal_proxy:
+#       - 10.0.0.0/8
+#       - 172.16.0.0/12
+#       - 192.168.0.0/16
 
 # apache_backup_vhosts : boolean to backup previous vhost file(s).
 # Defaults to omit / false
