--- a/tasks/modules.yml
+++ b/tasks/modules.yml
@@ -1,12 +1,12 @@
 ---
-- name: modules
+- name: Modules
   community.general.apache2_module:
     name: "{{ item.name }}"
     state: "{{ item.state }}"
     force: "{{ item.force | default(omit) }}"
   loop: "{{ apache_modules }}"
-  become: true
-  notify: reload apache
+  # become: true
+  notify: Reload apache
   tags:
     - apache
     - modules
