--- a/tasks/sites.yml
+++ b/tasks/sites.yml
@@ -20,7 +20,7 @@
     dest: "/etc/apache2/sites-available/{{ item.name }}.conf"
     mode: 0644
     backup: "{{ apache_backup_vhosts | default(omit) }}"
-  notify: reload apache
+  notify: Reload apache
   loop: "{{ apache_sites }}"
   when:
     - item.name != '000-default'
@@ -53,7 +53,7 @@
       "/etc/apache2/sites-enabled/{{ item.index |
       default('') }}{{ item.name }}.conf"
     state: link
-  notify: reload apache
+  notify: Reload apache
   loop: "{{ apache_sites }}"
   when:
     - not ansible_check_mode
@@ -73,7 +73,7 @@
       "/etc/apache2/sites-enabled/{{ item.index |
       default('') }}{{ item.name }}.conf"
     state: absent
-  notify: reload apache
+  notify: Reload apache
   loop: "{{ apache_sites }}"
   when:
     ( item.enabled is defined and not item.enabled )
