--- a/tasks/sites.yml
+++ b/tasks/sites.yml
@@ -18,7 +18,7 @@
   ansible.builtin.template:
     src: "{{ item.template | default('apache-http-site.conf.j2') }}"
     dest: "/etc/apache2/sites-available/{{ item.name }}.conf"
-    mode: 0644
+    mode: "0644"
     backup: "{{ apache_backup_vhosts | default(omit) }}"
   notify: Reload apache
   loop: "{{ apache_sites }}"
